--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lifeform Searcher</title>
     <style type="text/css">
       body {
         margin: 0;
@@ -29,7 +29,7 @@
   </head>
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this game.
     </noscript>
     <div id="root">
       <canvas id="container"></canvas>
