--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="favicon" href="%PUBLIC_URL%/favicon.ico">
     <title>Lifeform Searcher</title>
     <style type="text/css">
       body {
