--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         margin: 0;
         padding: 0;
         font-family: sans-serif;
+        background-color: #141226;
       }
     </style>
   </head>
