removed zoomScale, scaling is done with css image-rendering instead

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,11 @@
         font-family: sans-serif;
         background-color: #141226;
       }
+      #root canvas {
+        image-rendering: pixelated !important;
+        height: 512px !important;
+        width: 768px !important;
+      }
     </style>
   </head>
   <body>
