added nearest neighbor css fix for ie (what century is this?)

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       }
       #root canvas {
         image-rendering: pixelated !important;
+        -ms-interpolation-mode: nearest-neighbor !important;
         height: 512px !important;
         width: 768px !important;
       }
